--- a/src/components/Hero/Overflow/Overflow.astro
+++ b/src/components/Hero/Overflow/Overflow.astro
@@ -20,7 +20,7 @@ const { title, excerpt, image } = Astro.props;
             <article class="overflow_hero__content">
                 <h1 set:html={title}></h1>
                 <p>{excerpt}</p>
-                <a href="#contact" class="btn btn-md btn-primary" style="margin-top: 0.825rem;">Let's Talk</a>
+                <a href="#contact" class="btn btn-md btn-primary--darker" style="margin-top: 0.825rem;">Let's Talk</a>
             </article>
         </div>
     </Container>
