--- a/src/components/Sections/Sections.astro
+++ b/src/components/Sections/Sections.astro
@@ -23,7 +23,7 @@ const { sections, core_values } = Astro.props;
                     return (
                         <CtaSection data={section} core_values={core_values} />
                     );
-                case "testimonial":
+                case "default testimonial":
                     return <TestimonialDefault data={section} />;
                 case "stats grid":
                     return (
