--- a/src/components/Hero/TwoSquares/hero.css
+++ b/src/components/Hero/TwoSquares/hero.css
@@ -49,6 +49,9 @@
         width: 100%;
         height: 400px;
     }
+    .two-square__content h1 {
+        font-size: var(--heading-4xl);
+    }
 
     .two-square__image-wrapper {
         grid-column: 2 / -2;
