--- a/src/components/Hero/WavyHero/style.css
+++ b/src/components/Hero/WavyHero/style.css
@@ -52,19 +52,15 @@
 }
 
 .wavy_hero__content_title {
-
+    font-size: var(--heading-2xl);
     grid-column: 1 / -1;
     grid-row: 1 / -1;
     z-index: 2;
-    
-    display: grid;
-    place-content: center;
 
     height: max-content;
 
-    color: var(--clr-neutral-50);
+    color: var(--clr-primary);
 
-    padding: var(--size-4);
 }
 
 .wavy_hero__cover_image {
@@ -128,14 +124,7 @@
         grid-row: 1 / -1;
         z-index: 2;
         
-        display: grid;
-        place-content: center;
-
         height: max-content;
-
-        color: var(--clr-neutral-50);
-
-        padding: var(--size-4);
     }
 
     .wavy_hero__content_wrapper {
