--- a/src/components/PageNavigation/SimpleNav/SimpleNav.astro
+++ b/src/components/PageNavigation/SimpleNav/SimpleNav.astro
@@ -2,9 +2,8 @@
 import Container from "@components/Container.astro";
 import { Icon } from "astro-icon/components";
 import CustomImage from "@components/CustomImage.astro";
-import { translateNavItem } from "@utils/translations";
+import { translateNavItem } from '@utils/translations';
 import "./style.css";
-
 interface Props {
     blackText: boolean;
     fixedMenu: boolean;
@@ -19,24 +18,24 @@ interface Props {
 }
 
 const {
-    data: { links, logo, title },
+    data: { links, logo, title},
     fixedMenu,
     blackText,
-    country,
+    country
 } = Astro.props;
 
 const pageLinks = links.map((link) =>
     link === "home"
         ? { name: translateNavItem("home", country), href: "/" }
-        : {
-              name: translateNavItem(link, country),
-              href: `#${link.split(" ").join("-")}`,
-          },
+        : { 
+            name: translateNavItem(link, country), 
+            href: `#${link.split(" ").join("-")}` 
+          }
 );
 ---
 
 <nav
-    class="floating-pill-nav"
+    class="simple-nav"
     data-nav-bar
     data-nav
     data-is-active="false"
@@ -46,39 +45,28 @@ const pageLinks = links.map((link) =>
     aria-label="page navigation"
 >
     <Container>
-        <div class="floating-pill-nav__wrapper glass">
-            <a
-                class="floating-pill-nav__logo"
-                href="/"
-                aria-label={title.trim()}
-            >
+        <div class="simple-nav__wrapper">
+            <a class="simple-nav__logo" href="/" aria-label={title.trim()}>
                 <CustomImage
                     eager={true}
                     image={logo}
-                    classlist="floating-pill-nav__logo-image"
+                    classlist="simple-nav__logo-image"
                     size="small"
                 />
-                <span class="floating-pill-nav__logo-text">{title}</span>
+                <span class="simple-nav__logo-text">{title}</span>
             </a>
-            <menu
-                class="floating-pill-nav__menu"
-                data-menu
-                data-is-active="false"
-                aria-label="page menu"
-                role="menu"
-                aria-haspopup="true"
-                aria-expanded="false"
-            >
+            
+            <menu class="simple-nav__menu" data-menu data-is-active="false" aria-label="page menu" role="menu" aria-haspopup="true" aria-expanded="false">
                 {
                     pageLinks.map((link, index) => (
-                        <li class="floating-pill-nav__menu-item">
+                        <li>
                             <a
                                 title={link.href}
                                 href={link.href}
                                 class={
                                     index === pageLinks?.length - 1
-                                        ? "floating-pill-nav__link floating-pill-nav__link--cta"
-                                        : "floating-pill-nav__link"
+                                        ? "simple-nav__link simple-nav__link--cta"
+                                        : "simple-nav__link"
                                 }
                             >
                                 {link.name}
@@ -87,10 +75,10 @@ const pageLinks = links.map((link) =>
                     ))
                 }
             </menu>
-
+            
             <button
                 type="button"
-                class="floating-pill-nav__toggle"
+                class="simple-nav__toggle"
                 data-menu-toggle
                 data-is-active="false"
                 aria-label="toggle page menu"
