--- a/src/components/Sections/Section/section.css
+++ b/src/components/Sections/Section/section.css
@@ -7,13 +7,9 @@
     flex-direction: column;
     gap: var(--size-4);
 }
+
 .content_section__header h2 {
     font-size: var(--heading-xl);
-    color: var(--clr-primary-dark);
-}
-
-[data-highlight="true"] .content_section__header h2 {
-    color: var(--clr-neutral-50);
 }
 
 .content_section__content ul {
@@ -35,10 +31,15 @@
     line-height: 1.5;
 }
 
-.content_section__image_wrapper,
-.content_section__image {
+.content_section__image_wrapper {
     width: 100%;
     height: 100%;
+
+    max-height: max-content;
+}
+.content_section__image {
+    max-height: 400px;
+    width: auto;
 }
 
 /* Tablet and up */
