--- a/src/components/Sections/Testimonial/testimonial.css
+++ b/src/components/Sections/Testimonial/testimonial.css
@@ -1,20 +1,9 @@
-.testimonial-section {
-  padding: var(--size-9) var(--size-3);
-  background-color: var(--clr-neutral-100);
-}
-
-.testimonial-container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 var(--container-padding-inline);
-}
-
 .testimonial-title {
   text-align: left;
   font-size: var(--heading-large);
   font-weight: var(--heading-large-weight);
   margin-bottom: var(--size-8);
-  color: var(--clr-neutral-900);
+  /* color: var(--clr-neutral-900); */
   max-width: 20ch;
 }
 
